2012-06-06  Ryosuke Niwa  <rniwa@webkit.org>

        Chromium rebaseline after r119617 part 3.

        * platform/chromium-linux-x86/fast/images: Removed.
        * platform/chromium-linux-x86/fast/media: Removed.
        * platform/chromium-linux-x86/fast/multicol/span/anonymous-style-inheritance-expected.png: Added.
        * platform/chromium-linux-x86/fast/multicol/span/span-as-immediate-child-generated-content-expected.png: Added.
        * platform/chromium-linux-x86/fast/multicol/span/span-as-immediate-columns-child-expected.png: Added.
        * platform/chromium-linux-x86/fast/multicol/vertical-lr: Added.
        * platform/chromium-linux-x86/fast/multicol/vertical-lr/column-rules-expected.png: Added.
        * platform/chromium-linux-x86/fast/multicol/vertical-lr/float-paginate-complex-expected.png: Added.
        * platform/chromium-linux-x86/fast/multicol/vertical-lr/nested-columns-expected.png: Added.
        * platform/chromium-linux-x86/fast/multicol/vertical-rl: Added.
        * platform/chromium-linux-x86/fast/multicol/vertical-rl/column-rules-expected.png: Added.
        * platform/chromium-linux-x86/fast/multicol/vertical-rl/float-paginate-complex-expected.png: Added.
        * platform/chromium-linux-x86/fast/multicol/vertical-rl/nested-columns-expected.png: Added.
        * platform/chromium-linux/fast/forms/file/file-input-direction-expected.png:
        * platform/chromium-linux/fast/forms/form-hides-table-expected.png:
        * platform/chromium-linux/fast/forms/textAreaLineHeight-expected.png:
        * platform/chromium-linux/fast/frames/frame-scrolling-attribute-expected.png:
        * platform/chromium-linux/fast/frames/iframe-scrolling-attribute-expected.png:
        * platform/chromium-linux/fast/images/gif-large-checkerboard-expected.png:
        * platform/chromium-linux/fast/inline/inline-borders-with-bidi-override-expected.png:
        * platform/chromium-linux/fast/invalid/residual-style-expected.png: