@@ -1,0 +1,8 @@
+<script>
+if (window.layoutTestController) {
+	layoutTestController.dumpAsText();
+	layoutTestController.dumpChildFramesAsText();
+}
+</script>
+The webarchive in this iframe is utf-8 encoded and will only display properly if the webarchive's encoding is respected.<br>
+<iframe src="resources/utf8-encoded.webarchive"></iframe>
