@@ -1,3 +1,15 @@
+2012-06-06  Brady Eidson  <beidson@apple.com>
+
+        <rdar://problem/11575112> and https://bugs.webkit.org/show_bug.cgi?id=88428
+        REGRESSION (r115654): Opening many non-English WebArchives shows obvious encoding issues
+
+        Reviewed by Nate Chapin.
+
+        Test: fast/loader/webarchive-encoding-respected.html
+
+        * loader/DocumentLoader.cpp:
+        (WebCore::DocumentLoader::commitData): Properly set the main resource encoding from the webarchive.
+
 2012-06-06  Mark Hahnenberg  <mhahnenberg@apple.com>
 
         Worker tear-down can re-enter JSC during GC finalization
